[gd_scene load_steps=11 format=2]

[ext_resource path="res://Art/ArrowWindow.png" type="Texture" id=1]
[ext_resource path="res://Scripts/ArrowBox.gd" type="Script" id=2]
[ext_resource path="res://Art/Good.png" type="Texture" id=3]
[ext_resource path="res://Art/Perfect.png" type="Texture" id=4]
[ext_resource path="res://Art/Okay.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 0.896141, 25.2842 )

[sub_resource type="Animation" id=7]
resource_name = "BoxBlowup"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Good"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("Okay:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.7, 0.7 ), Vector2( 0.7, 0.35 ), Vector2( 0.7, 0.875 ), Vector2( 0.7, 0.7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Okay:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.4, 24 ), Vector2( 0.4, 39 ), Vector2( 0.4, 32.5 ), Vector2( 0.4, 34 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Okay:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "Good"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("Good:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Good:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.426, 24 ), Vector2( 0.426, 39 ), Vector2( 0.426, 32.5 ), Vector2( 0.426, 34 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Good:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.7, 0.7 ), Vector2( 0.7, 0.35 ), Vector2( 0.7, 0.875 ), Vector2( 0.7, 0.7 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "Perfect"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("Perfect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.4, 24 ), Vector2( 0.4, 39 ), Vector2( 0.4, 32.5 ), Vector2( 0.4, 34 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Perfect:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.7, 0.7 ), Vector2( 0.7, 0.35 ), Vector2( 0.7, 0.875 ), Vector2( 0.7, 0.7 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Perfect:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="ArrowBox" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Okay" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0.4, 34 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 5 )

[node name="Good" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0.426, 24 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )

[node name="Perfect" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0.4, 34 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 4 )

[node name="BoxBlowup" type="AnimationPlayer" parent="."]
anims/BoxBlowup = SubResource( 7 )

[node name="OkayAnim" type="AnimationPlayer" parent="."]
anims/Okay = SubResource( 5 )

[node name="GoodAnim" type="AnimationPlayer" parent="."]
anims/Good = SubResource( 8 )

[node name="PerfectAnim" type="AnimationPlayer" parent="."]
anims/Perfect = SubResource( 9 )
